<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondorecetaguardada">

    <LinearLayout
        android:id="@+id/lineaLayoutRecetasGuardadas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/tvRecetaGuardadaTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/Receta"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvIngredientesTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/Ingredientes"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="#F2F3F4"/>

        <TextView
            android:id="@+id/tvIngredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:text="@string/IngredientesGuardados"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvPreparacionTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/Preparacion"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="#F2F3F4"/>

        <TextView
            android:id="@+id/tvPreparacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:text="@string/PreparacionGuardada"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>