<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="horizontal"
    android:background="@color/white"
    android:weightSum="7"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="5"
        android:padding="4dp">

        <TextView
            android:id="@+id/tvTituloSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Deemefit"
            android:textSize="16sp"
            android:textColor="@color/black"
            style="@style/TextAppearance.Compat.Notification.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MensajeNotificacionCorto"
            android:textColor="@color/black"
            style="@style/TextAppearance.Compat.Notification" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivLogoDeemefitSmall"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/deemefitsombra"
        android:layout_weight="2"
        android:contentDescription="@string/DescripcionImagenLogo" />

</LinearLayout>