<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SeguimientoPesoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSeguimientoPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SeguimientoPeso"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold"
            android:fontFamily="@font/aesthetic"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/etPesoNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/IntroducePeso"
            android:minHeight="48dp"
            android:layout_margin="15dp"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/etFechaNueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:hint="@string/IntroduceFecha"
            android:inputType="number"
            android:clickable="false"
            android:focusable="false"
            android:minHeight="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/botones_fondo"
                android:paddingLeft="34dp"
                android:paddingRight="34dp"
                android:text="@string/Aniadir"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck"/>

        <TextView
            android:id="@+id/tvPesoGuardado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PesoGuardado"
            android:layout_margin="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:gravity="center">
        </TextView>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/deslizar5">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>