<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNuevaReceta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/NuevaReceta"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck"
            android:background="#A6ACAF"/>

            <ImageButton
                android:id="@+id/btnCerrarDialog"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_close"
                android:layout_marginStart="-40dp"
                android:layout_marginTop="1dp"
                android:padding="16dp"
                android:background="@drawable/botones_fondo"/>
        </LinearLayout>

        <EditText
            android:id="@+id/etIntroduceNombreReceta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/IntroduceNombreReceta"
            android:minHeight="48dp"
            android:layout_margin="15dp"/>
        <EditText
            android:id="@+id/etIntroduceIngredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/IntroduceIngredientes"
            android:minHeight="48dp"
            android:layout_margin="15dp"
            android:inputType="textMultiLine" />
        <EditText
            android:id="@+id/etIntroducePreparacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/IntroducePreparacion"
            android:minHeight="48dp"
            android:layout_margin="15dp"
            android:inputType="textMultiLine" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGuardarReceta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/botones_fondo"
            android:padding="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Guardar"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>