<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.IniciarSesionActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivDeemefit"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/deemefitsombra"/>

        <TextView
            android:id="@+id/tvBienvenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/TextoPresentacion"
            android:textColor="@color/black"
            android:textSize="44sp"
            android:textStyle="bold"
            android:fontFamily="@font/aesthetic"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/Email"
                android:background="@color/white"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:endIconMode="password_toggle"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/Contrasenia"
                android:background="@color/white"
                android:textSize="16sp"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvOlvidasteContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="24dp"
            android:textSize="14sp"
            android:text="@string/OlvidoContraseña"
            android:textColor="#AED6F1"
            android:gravity="end"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnIniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/botones_fondo"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/IniciarSesion"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvNoTienesCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/NoCuenta"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvRegistrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0"
            android:text="@string/Regístrate"
            android:textColor="#AED6F1"
            android:textSize="22sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>